--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -4,11 +4,30 @@
 
 <h2>Trips</h2>
 
-<ul>
-  <% @trips.each do |trip| %>
-  <li><%= trip.date %></li>
-  <% end %>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Date/Time</th>
+      <th>Origin</th>
+      <th>Destination</th>
+      <th>Driver</th>
+      <th>VIN#</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @trips.each do |trip| %>
+    <tr>
+      <td><%= trip.id %></td>
+      <td><%= trip.date %></td>
+      <td><%= trip.origin.name %></td>
+      <td><%= trip.destination.name %></td>
+      <td><%= "#{trip.driver.last_name}, #{trip.driver.first_name}" %></td>
+      <td><%= trip.tractor.vin %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <h2>Drivers</h2>
 <ul>
