Add ability to check for new trips, give option to reload when true

--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Statistics</h1>
 
-<a href="#" id="update">Update</a>
+<a href="#" id="update">Check for new trips</a>
 
 <h2>Trips</h2>
 
-<table>
+<table class="trips">
   <thead>
     <tr>
       <th>ID</th>
